Bug 152177 - Modern IDB: storage/indexeddb/intversion-abort-in-initial-upgradeneeded.html fails
Summary: Modern IDB: storage/indexeddb/intversion-abort-in-initial-upgradeneeded.html ...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: Safari 9
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Brady Eidson
URL:
Keywords:
Depends on:
Blocks: 149117 150882
  Show dependency treegraph
 
Reported: 2015-12-11 10:36 PST by Brady Eidson
Modified: 2015-12-11 11:57 PST (History)
6 users (show)

See Also:


Attachments
Patch v1 (9.85 KB, patch)
2015-12-11 10:40 PST, Brady Eidson
achristensen: review+
buildbot: commit-queue-
Details | Formatted Diff | Diff
Archive of layout-test-results from ews107 for mac-yosemite-wk2 (1.18 MB, application/zip)
2015-12-11 11:31 PST, Build Bot
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Brady Eidson 2015-12-11 10:36:38 PST
Modern IDB: storage/indexeddb/intversion-abort-in-initial-upgradeneeded.html fails

Part of this is that the Request's transaction was set to null a bit too early.

The other part is that the test expected the OpenDBRequest to have its result set to the database connection in case of error.
The spec does *not* call for this, and the other browsers do not do it.
So I'll fix the test, too.
Comment 1 Brady Eidson 2015-12-11 10:40:18 PST
Created attachment 267173 [details]
Patch v1
Comment 2 Build Bot 2015-12-11 11:31:54 PST
Comment on attachment 267173 [details]
Patch v1

Attachment 267173 [details] did not pass mac-wk2-ews (mac-wk2):
Output: http://webkit-queues.webkit.org/results/546220

New failing tests:
storage/indexeddb/intversion-abort-in-initial-upgradeneeded.html
Comment 3 Build Bot 2015-12-11 11:31:57 PST
Created attachment 267176 [details]
Archive of layout-test-results from ews107 for mac-yosemite-wk2

The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews.
Bot: ews107  Port: mac-yosemite-wk2  Platform: Mac OS X 10.10.5
Comment 4 Brady Eidson 2015-12-11 11:57:09 PST
Added wk2 specific expectations.

Fixed in https://trac.webkit.org/changeset/193970